build: native image support